Atualizando o border-radius da imagem em blockquote

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -190,8 +190,8 @@ blockquote {
 		margin: 0 0 0 15px;
 		vertical-align: middle;
 		img {
-			max-width: 100%;
-			border-radius: 200px;
+			max-width: 90%;
+			border-radius: 100%;
 		}
 	}
 }
