--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png" sizes="32x32">
+		<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" sizes="48x48">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
